# servant-scalar

./: CHANGELOG.md  LICENSE  README.md  cabal.project  servant-scalar.cabal
example/: Main.hs  servant-scalar-example.cabal
src/Servant/: Scalar.hs
src/Servant/Scalar/: Config.hs  Html.hs  Server.hs
